Termination Api + Confirm Api
